src/test/deca/syntax/valid/LE/Attribut.deca
//test pour les classes

class Atrribut {
    int a; 
    protected float b ;
    boolean juste ;

}