src/test/deca/syntax/invalid/LE/OublieClass.deca
////test invalide
//oublie du mot class 

C1 {
    int a ;
    float b ;
}